[package]
name = "gestalt_ratio"
version = "0.2.1"
authors = ["Alex Sanchez-Stern <alex.sanchezstern@gmail.com>"]
edition = "2018"
description = "Calculate the gestalt pattern matching ratio between two strings"
readme = "README.md"
repository = "https://github.com/HazardousPeach/gestalt-ratio-rust/"
license = "GPL-3.0"
keywords = ["string", "gestalt", "ratio", "similarity", "matching"]
categories = ["algorithms", "text-processing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

unicode-segmentation = "^1.6.0"
